feat: make validationStats thread-safe